--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
 title: [Christina Niklaus]
 description: [Research Assistant at University of St.Gallen]
+github:
+  repository_url:
