--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [Christina Niklaus]
-description: [Research Assistant at University of St.Gallen]
+description: [Research Assistant - University of St.Gallen]
